2.0.2
    o fix issue empty page start report
    o fix issue figure overflows page for parameter var with multiple lines
2.0.1
    o vignette: shorten path exported figures (CRAN requirement for Windows)
2.0.0
    o change default color palette to generic: get[Color|Shape|Linetype]PalettePatientProfile
    o fix in case bookmarkVar is a factor
    o new options to set color/shape palette globally
    o figure dir not created if exportFigures is FALSE on Windows
    o no export of getPathTemplate
1.5.0
    o add unit tests
    o no export of subjectProfileTheme
    o subjectProfileTextPlot:
      - fix ordering in case paramNameVar is a factor
      - param value lab is used even if not table
      - table output: 
        - records sorted based on value var (especially for factor)
        - fix in case only one param value var is specified
    o subjectProfileEventPlot/subjectProfileLinePlot/subjectProfileIntervalPlot:
      - records sorted based on levels of param var if factor
      - missing values in paramVar or paramNameVar are not filtered
      - extract number of lines legend from plot instead of data for simplicity
    o subjectProfileEventPlot:
      - fix when paramVarLab not specified for all vars
      - x lab set to time lab by default
    o subjectProfileEvent/subjectProfileLinePlot:
      - shape lab set to color lab if color but not shape var specified
      - fix in case shape and color vars are the same
    o subjectProfileLinePlot:
      - remove warning if ref var are missing
    o subjectProfileIntervalPlot
      - correct typo: 'data-by-subject' -> 'data-based'
      - remove rangeSimilarStartEnd parameter (not used)
      - add info on imputation in the caption
   o subjectProfileCombine:
        + attribute nLinesPlot -> metaData$nLines for consistency with subject plot fct
    o getPageVar:
      - fix when only one var is specified
    o fct renaming:
        - getNLinesYGgplot -> getNLinesSubjectProfile